# voxels

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
client/: CMakeLists.txt  main.cpp
include/livre/: Window.h  header.h  livre.h  text.h
include/livre/Graphics/: BufferArray.h  BufferObject.h  Drawable.h  FrameContext.h  GraphicsPipeline.h  InstanceObject.h  ModelObject.h  Pipeline.h  RenderInstance.h  Renderer.h  Shader.h  VertexObject.h  Window.h
include/livre/Math/: color.h  vec.h
src/: CMakeLists.txt  Graphics.cpp  Window.cpp  text.cpp
src/Graphics/: BufferArray.cpp  BufferObject.cpp  FrameContext.cpp  GraphicsPipeline.cpp  ModelObject.cpp  Pipeline.cpp  RenderInstance.cpp  Renderer.cpp  Shader.cpp  VertexObject.cpp  Window.cpp
